--- a/package.json
+++ b/package.json
@@ -23,18 +23,21 @@
     "@codesandbox/sandpack-themes": "^2.0.21",
     "fs-extra": "^11.1.1",
     "glob": "^10.2.6",
-    "next": "^13.0.6",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest",
+    "next": "^15.4.1",
+    "nextra": "^3.0.12",
+    "nextra-theme-docs": "^3.0.12",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
+    "@types/react": "19.1.8",
+    "autoprefixer": "^10.4.21",
+    "cssnano": "^7.1.0",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^4.9.3"
   }
 }
