--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "@codesandbox/sandpack-themes": "^2.0.21",
     "fs-extra": "^11.1.1",
     "glob": "^10.2.6",
-    "next": "^13.0.6",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest",
+    "next": "^14.0.0",
+    "nextra": "2.13.4",
+    "nextra-theme-docs": "2.13.4",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0"
