--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nextra-theme-docs": "2.13.4",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
